--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/style.css"> 
-    <script src="js/script.js" defer></script>
+    <link rel="stylesheet" href="css/style.css"> 
     <title>Quizz Programação</title>
 </head>
 <body>
@@ -33,5 +32,6 @@
     <!-- TEMPLATE DE RESPOSTA -->
     <button class="answer-template hide"><span class="btn-letter">b</span>
         <span class="question-answer">km</span></button>
+    <script src="js/script.js" defer></script>
 </body>
 </html>
